server/manifest/deployment.yaml
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: bike-bendigo-ltu-api
  spec:
    revisionHistoryLimit: 2
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
        maxSurge: 2
    template:
      metadata:
        labels:
          app: bike-bendigo-ltu-api
          track: stable
      spec:
        containers:
        - name: bike-bendigo-ltu-api
          image: gcr.io/doomsdaytuna-1470749755823/bike-bendigo-ltu-api:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3030
            protocol: TCP
