server/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bike-bendigo-ltu-api
spec:
  selector:
    app: bike-bendigo-ltu-api
  ports:
    - name: client
      protocol: TCP
      port: 80
      targetPort: 3030
